--- a/CSS.html
+++ b/CSS.html
@@ -94,19 +94,18 @@
         </div>
       </div>
     </nav>
-    <div class="list">
-      <ol>
+    <mian>
+      <div class="list">
+       <ol>
           <li><a class="bold" href="https://claireyang5588.github.io/display.html">display 屬性</a></li>
-        <li>
-          <a class="bold" href="https://claireyang5588.github.io/flexbox_one.html">flexbox(一)</a>
-          <ul>
-            <li>flex-direction</li>
-            <li>flex-warp</li>
-            <li>justify-content</li>
-          </ul>
-        </li>
-        <li>
-          <a class="bold" href="https://claireyang5588.github.io/flexbox_two.html">flexbox(二)</a>
+          <li><a class="bold" href="https://claireyang5588.github.io/flexbox_one.html">flexbox(一)</a>
+            <ul>
+              <li>flex-direction</li>
+              <li>flex-warp</li>
+              <li>justify-content</li>
+            </ul>
+         </li>
+         <li><a class="bold" href="https://claireyang5588.github.io/flexbox_two.html">flexbox(二)</a>
           <ul>
             <li>flex-grow</li>
             <li>flex-shrink</li>
@@ -134,6 +133,7 @@
         </li>
       </ol>
     </div>
+    </mian>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
