--- a/display.html
+++ b/display.html
@@ -42,7 +42,7 @@
                 <a
                   class="nav-link active"
                   aria-current="page"
-                  href="https://claireyang5588.github.io/Second.html"
+                  href="https://claireyang5588.github.io/HTML.html"
                   >HTML</a
                 >
               </li>
