--- a/CSS_Selectors.html
+++ b/CSS_Selectors.html
@@ -72,7 +72,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">CSS</a>
+              <a class="nav-link" href="https://claireyang5588.github.io/CSS.html">CSS</a>
             </li>
             <li class="nav-item dropdown">
               <a
