--- a/display.html
+++ b/display.html
@@ -22,6 +22,11 @@
        main {
         margin: 0 300px;
       }
+        @media screen and (max-width: 800px) {
+        main {
+          margin: 10px;
+        }
+      }
       </style>
   </head>
   <body>
