--- a/flexbox_two.html
+++ b/flexbox_two.html
@@ -26,6 +26,11 @@
        main {
         margin: 0 300px;
       }
+        @media screen and (max-width: 800px) {
+        main {
+          margin: 10px;
+        }
+      }
     </style>
   </head>
   <body>
