--- a/flexbox_one.html
+++ b/flexbox_one.html
@@ -27,6 +27,7 @@
         margin: 0 300px;
       }
       @media screen and (max-width: 800px) {
+        body{ font-size: 1.0rem}
         main {
           margin: 10px;
         }
