--- a/CSS_position.html
+++ b/CSS_position.html
@@ -1,1 +1,184 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>flex(一)</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+      crossorigin="anonymous"
+    />
+    <style>
+      body {
+        background-color: #303030;
+        color: white;
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        font-size: 1.2rem;
+      }
+      span {
+        color: red;
+      }
+      main {
+        margin: 0 300px;
+      }
+      @media screen and (max-width: 800px) {
+        body {
+          font-size: 1rem;
+        }
+        main {
+          margin: 10px;
+        }
+      }
+    </style>
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a
+          class="navbar-brand"
+          href="https://claireyang5588.github.io/index.html"
+          >首頁</a
+        >
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="https://claireyang5588.github.io/HTML.html"
+                >HTML</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="https://claireyang5588.github.io/CSS.html"
+                >CSS</a
+              >
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                JavaScript
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Basics</a></li>
+                <li><a class="dropdown-item" href="#">Advanced</a></li>
+                <li><hr class="dropdown-divider" /></li>
+                <li>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled">Disabled</a>
+            </li>
+          </ul>
+          <form class="d-flex" role="search">
+            <input
+              class="form-control me-2"
+              type="search"
+              placeholder="Search"
+              aria-label="Search"
+            />
+            <button class="btn btn-outline-success" type="submit">
+              Search
+            </button>
+          </form>
+        </div>
+      </div>
+    </nav>
+    <main>
+      <br />
+      <br />
+      <p>
+        CSS position也是網頁排版中，重要的代表之一
+        position指的是“位置”，也就是透過CSS position可以調整元素在網頁中的位置
+      </p>
+      <p>
+        position可使用的值有：<br />
+        static、relative、absolute、fixed、sticky
+      </p>
+      <br />
+      <h1>static(靜態的)</h1>
+      <p>
+        這是默認值，當position設定為static時，元素不會有任何變動
+        <br />根據元素原始的規則排版，例如inlink就是左右，block就是上下
+        <br />另外在position設定為static時，對z-index是無效的
+      </p>
+      <p>
+        那什麼又是z-index呢？
+        <br />就是當你的元素重疊的時候顯示的順序，誰要再上層，誰要在下層？
+        <br />就必須透過z-index來設定，數值越大就會顯示在越上層
+      </p>
+      <br />
+      <h1>relative(相對的)</h1>
+      <p>
+        透過right、left、top、bottom調整順序，依照自己本身的相對位置
+        <br />舉例以下有三個box，排列順序是按照div的屬性block
+      </p>
+      <blockquote class="imgur-embed-pub" lang="en" data-id="88BOCjx">
+        <a href="https://imgur.com/88BOCjx">View post on imgur.com</a>
+      </blockquote>
+      <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+      <p>當在box2設定position: relative且調整left: 200px;top: 100px;</p>
+      <code
+        >.box1 { background-color: lawngreen; } .box2 { background-color: aqua;
+        position: relative; left: 200px; top: 100px; } .box3 { background-color:
+        yellow; }</code
+      >
+      <p>
+        box2(亮藍)就會先往自己的左邊移動200px(這裡每一個小格是100x100)，然後在往下移動100px
+      </p>
+      <blockquote class="imgur-embed-pub" lang="en" data-id="Kt5X44f">
+        <a href="https://imgur.com/Kt5X44f">View post on imgur.com</a>
+      </blockquote>
+      <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+      <p>
+        當移動位置導致與其他元素重疊時，可使用z-index來決定元素顯示的順序
+        前提是元素中都必須要有設定z-index的數值 box3(黃)的z-index:
+        2是大於box2(亮藍)的z-index: 1，就會移到上層
+      </p>
+      <blockquote class="imgur-embed-pub" lang="en" data-id="IlTHG2G">
+        <a href="https://imgur.com/IlTHG2G">View post on imgur.com</a>
+      </blockquote>
+      <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+    </main>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+      crossorigin="anonymous"
+    ></script>
+    <code>
+      .box1 { background-color: lawngreen; } .box2 { background-color:
+      aqua;position: relative; left: 50px; top: 50px; z-index: 1; }
+      .box3{background-color: yellow; position: relative; z-index: 2; }
+    </code>
+    <blockquote class="imgur-embed-pub" lang="en" data-id="uRBAw07">
+      <a href="https://imgur.com/uRBAw07">View post on imgur.com</a>
+    </blockquote>
+    <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+  </body>
+</html>
 
