--- a/CSS_position.html
+++ b/CSS_position.html
@@ -23,13 +23,25 @@
       span {
         color: red;
       }
+
       main {
         margin: 0 300px;
       }
-      @media screen and (max-width: 800px) {
-        body {
-          font-size: 1rem;
-        }
+
+      pre {
+        background-color: white;
+        border-radius: 3px;
+      }
+      .cb {
+        color: black;
+        font-weight: bolder;
+      }
+
+      .part {
+        color: blue;
+      }
+        @media screen and (max-width: 800px) {
+        body{ font-size: 1.0rem}
         main {
           margin: 10px;
         }
