--- a/CSS_position.html
+++ b/CSS_position.html
@@ -40,8 +40,10 @@
       .part {
         color: blue;
       }
-        @media screen and (max-width: 800px) {
-        body{ font-size: 1.0rem}
+      @media screen and (max-width: 800px) {
+        body {
+          font-size: 1rem;
+        }
         main {
           margin: 10px;
         }
@@ -155,11 +157,14 @@
       </blockquote>
       <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
       <p>當在box2設定position: relative且調整left: 200px;top: 100px;</p>
-       <pre><code class="cb"> 
+      <br />
+      <pre><code class="cb"> 
        .box1 { background-color: lawngreen; } 
-       .box2 { background-color: aqua;position: relative; left: 200px; top: 100px; } 
+       .box2 { background-color: aqua;
+               position: relative; 
+               left: 200px; top: 100px; } 
        .box3 { background-color:yellow; }
-      </code>
+      </code></pre>
       <p>
         box2(亮藍)就會先往自己的左邊移動200px(這裡每一個小格是100x100)，然後在往下移動100px
       </p>
@@ -176,21 +181,26 @@
         <a href="https://imgur.com/IlTHG2G">View post on imgur.com</a>
       </blockquote>
       <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+      <pre><code class="cb"> 
+        .box1 { background-color: lawngreen; } 
+        .box2 { background-color:aqua;
+                position: relative; 
+                left: 50px; 
+                top: 50px; 
+                z-index: 1; }
+        .box3{background-color: yellow;
+              position: relative;
+              z-index: 2; }</code></pre>
+      <br />
+      <blockquote class="imgur-embed-pub" lang="en" data-id="uRBAw07">
+        <a href="https://imgur.com/uRBAw07">View post on imgur.com</a>
+      </blockquote>
+      <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
     </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
       crossorigin="anonymous"
     ></script>
-      <pre><code class="cb"> 
-      .box1 { background-color: lawngreen; } .box2 { background-color:
-      aqua;position: relative; left: 50px; top: 50px; z-index: 1; }
-      .box3{background-color: yellow; position: relative; z-index: 2; }
-    </code>
-    <blockquote class="imgur-embed-pub" lang="en" data-id="uRBAw07">
-      <a href="https://imgur.com/uRBAw07">View post on imgur.com</a>
-    </blockquote>
-    <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
   </body>
 </html>
-
