--- a/flexbox_two.html
+++ b/flexbox_two.html
@@ -13,7 +13,8 @@
     />
     <style>
       body {
-        background-color: #303030;
+         #background-color: #303030;
+          background-image: url("https://images.unsplash.com/photo-1664179550988-5cc4755ab6e5?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHx0b3BpYy1mZWVkfDF8Q0R3dXdYSkFiRXd8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=60");
         color: white;
         margin: 0;
         padding: 0;
