--- a/index.html
+++ b/index.html
@@ -3,24 +3,26 @@
   <head>
     <meta charset="utf-8" />
     <title>Claire's Bolg</title>
-  <script>
-      window.difyChatbotConfig = {
-        token: "hrU94t2qI5jQT6jc",
-        systemVariables: {
-          // user_id: 'YOU CAN DEFINE USER ID HERE',
-          // conversation_id: 'YOU CAN DEFINE CONVERSATION ID HERE, IT MUST BE A VALID UUID',
-        },
-        userVariables: {
-          // avatar_url: 'YOU CAN DEFINE USER AVATAR URL HERE',
-          // name: 'YOU CAN DEFINE USER NAME HERE',
-        },
-      };
-    </script>
-    <script
-      src="https://udify.app/embed.min.js"
-      id="hrU94t2qI5jQT6jc"
-      defer
-    ></script>
+ <script>
+ window.difyChatbotConfig = {
+  token: 'hrU94t2qI5jQT6jc',
+  baseUrl: 'http://agent.efoxconn.com'
+ }
+</script>
+<script
+ src="http://agent.efoxconn.com/embed.min.js"
+ id="hrU94t2qI5jQT6jc"
+ defer>
+</script>
+<style>
+  #dify-chatbot-bubble-button {
+    background-color: #1C64F2 !important;
+  }
+  #dify-chatbot-bubble-window {
+    width: 24rem !important;
+    height: 40rem !important;
+  }
+</style>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
