--- a/index.html
+++ b/index.html
@@ -3,26 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Claire's Bolg</title>
- <script>
- window.difyChatbotConfig = {
-  token: 'hrU94t2qI5jQT6jc',
-  baseUrl: 'http://agent.efoxconn.com'
- }
-</script>
-<script
- src="http://agent.efoxconn.com/embed.min.js"
- id="hrU94t2qI5jQT6jc"
- defer>
-</script>
-<style>
-  #dify-chatbot-bubble-button {
-    background-color: #1C64F2 !important;
-  }
-  #dify-chatbot-bubble-window {
-    width: 24rem !important;
-    height: 40rem !important;
-  }
-</style>
+claireyang5588.github.io
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
